<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- APP -->
    <string name="app_name">BookAndGo</string>

    <!-- ERRORS -->
    <string name="comprueba_tu_bandeja_de_entrada">" Comprueba tu bandeja de entrada para recuperar la contraseña"</string>
    <string name="account_not_found">La cuenta no ha sido encontrada</string>
    <string name="wrong_data">Datos incorrectos</string>

    <!-- MESSAGES -->
    <string name="forgot_password_toast_msg">Te hemos enviado un correo electrónico para recuperar tu contraseña</string>

    <!-- BUTTONS -->
    <string name="btn_get_started">Explorar experiencias »</string>
    <string name="btn_next">Siguiente</string>
    <string name="btn_omit">Omitir este paso</string>
    <string name="btn_sign_in">Iniciar sesión</string>
    <string name="btn_sign_up">Registrarse</string>
    <string name="btn_skip">Saltar</string>
    <string name="btn_close">Cerrar</string>

    <!-- ONBOARDING SCREENS -->
    <string name="ob_subtitle_1">Aventuras únicas con amigos</string>
    <string name="ob_subtitle_2">Aventuras hechas a medida para ti</string>
    <string name="ob_subtitle_3">Reserva tu próxima experiencia ahora</string>
    <string name="ob_title_1">Descubre juntos</string>
    <string name="ob_title_2">Personaliza tu viaje</string>
    <string name="ob_title_3">Salta a la diversión</string>

    <!-- WELCOME SCREEN -->
    <string name="w_subtitle" tools:ignore="Typos">Reserve en cualquier momento y lugar</string>
    <string name="w_title">Todo un mundo de experiencias a tu alcance</string>

    <!-- LOGIN SCREEN -->
    <string name="lg_forgot_password">¿Olvidaste la contraseña?</string>
    <string name="lg_not_account">¿No tienes una cuenta?<u>Registrarse</u></string>
    <string name="lg_professional">¿Eres un profesional o una empresa y quieres publicar tu servicio en nuestra plataforma?</string>
    <string name="lg_ti_email">Correo electrónico</string>
    <string name="lg_ti_password">Contraseña</string>">
    <string name="lg_title_1">Bienvenido</string>
    <string name="lg_title_2">Bienvenido de vuelta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- REGISTER SCREEN -->
    <string name="upload_your_picture">Upload your picture</string>
    <string name="personal_information">Personal Information</string>
    <string name="preference_and_availability">Preference &amp; Availability</string>
    <string name="terms_and_conditions">Almost there</string>
    <string name="terms_and_conditions_chkbox"><b><u>Terms &amp; Conditions</u></b></string>
    <string name="terms_and_conditions_body">You are one step away from completing the registration. To wrap this up, you can agree to our <b>Terms &amp; Conditions</b>.\n\nWe publish the BookAndGo <b>Terms &amp; Conditions</b> so that you know what to expect as you use our services.\n\nBy checking the box below, you agree to these terms.</string>


    <!-- HOME SCREEN -->
    <string name="search_experience">Buscar experiencias</string>
    <string name="prefered_experience_categories">Prefered Experience Categories</string>
    <string name="preferences">Preferences</string>
    <string name="no_experiences_found">No experiences found</string>
    <string name="experience_not_found">No experiences found</string>

    <!-- GIFT CARD SCREEN -->
    <string name="giftcard_screen_name">Tarjeta Regalo</string>
    <string name="giftcard_input_name">Nombre del destinatario</string>
    <string name="giftcard_input_email">Correo electrónico del destinatario</string>
    <string name="giftcard_input_message">Mensaje para el destinatario</string>
    <string name="giftcard_button_checkout">Proceder a pagar</string>
    <string name="gift_not_found">No experiences found</string>


</resources>