<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.login.LoginActivity">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/lg_title_1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_xxlarge"
        android:fontFamily="@font/playfair_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_logo" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_login_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_xxxlarge"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_login_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfair_regular"
            android:hint="@string/lg_ti_email"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_login_mail"
        app:endIconMode="password_toggle"
        app:passwordToggleTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfair_regular"
            android:hint="@string/lg_ti_password"
            android:textColorHint="@color/black"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/inLogin_forgot_PW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/lg_forgot_password"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small"
        android:fontFamily="@font/playfair_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_login_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_lgs_login"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xxxlarge"
        android:layout_marginHorizontal="@dimen/margin_xxxlarge"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/playfair_regular"
        android:text="@string/btn_sign_in"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/corner_radius_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inLogin_forgot_PW"
        style="@style/insets" />


    <TextView
        android:id="@+id/text_inLogin_create_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/lg_not_account"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small"
        android:fontFamily="@font/playfair_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_lgs_login" />

    <TextView
        android:id="@+id/text_inLogin_create_experience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_xxxlarge"
        android:lineHeight="@dimen/spacing_large"
        android:text="@string/lg_professional"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small"
        android:fontFamily="@font/playfair_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_inLogin_create_count" />


</androidx.constraintlayout.widget.ConstraintLayout>