<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.register.fragments.termsandconds.TermsAndConditionsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_terms_and_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/playfair_regular"
            android:text="@string/terms_and_conditions"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

          <TextView
            android:id="@+id/tv_agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/playfair_regular"
            android:text="@string/terms_and_conditions_body"
            android:textAlignment="textStart"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_terms_and_conditions"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_agreement">

            <!-- Checkbox -->
            <CheckBox
                android:id="@+id/checkbox_terms"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black" />

            <!-- Espaciado entre el checkbox y el texto -->
            <View
                android:layout_width="8dp"
                android:layout_height="match_parent"/>

            <!-- Texto de los términos y condiciones -->
            <TextView
                android:id="@+id/text_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions_chkbox"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:fontFamily="@font/playfair_regular"
                />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            style="@style/insets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/playfair_regular"
            android:text="Register"
            android:textColor="@color/white"
            app:cornerRadius="8dp"
            app:strokeColor="@color/black"
            app:strokeWidth="0.5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>